fix layout bug in collection popover shoe name and detail link

--- a/app/assets/stylesheets/patterns/collection.scss
+++ b/app/assets/stylesheets/patterns/collection.scss
@@ -22,7 +22,6 @@
 	@include transition-duration(0.15s);
 	@include opacity(0);
 	width: 190px;
-	height: 50px;
 	padding: 10px;
 	position: absolute;
 	bottom: 10px;
@@ -41,7 +40,7 @@
 	font-size: 18px;
 	line-height: 1.4em;
 	margin-top: 0;
-	margin-bottom: 0;
+	margin-bottom: 5px;
 }
 
 .collection .item-link {
